# groot2_utils

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
samples/: simple_tree_formatted.xml  simple_tree_notok.xml
src/: groot2_formatter.cpp  xml_formatter.cpp  xml_formatter.hpp
